src/objects/Education_Transcript__c.object
<CustomObject>
    <fields>
        <fullName>CS_Rec_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cornerstone Unique Transcript ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Cornerstone Unique Transcript ID</inlineHelpText>
        <label>CS Rec Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category from Education Activity. Represents the Track</description>
        <formula>TEXT(Education_Activity__r.Category__c)</formula>
        <inlineHelpText>Category from Education Activity. Represents the Track</inlineHelpText>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_activity__c</fullName>
        <description>Category value from parent Education Activity</description>
        <inlineHelpText>Category value from parent Education Activity</inlineHelpText>
        <label>Category (activity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <formula>IF( Education_Activity__r.RecordType.DeveloperName = &quot;Certification&quot;, TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education Transcripts</relationshipLabel>
        <relationshipName>Education_Transcripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Education_Activity__c</fullName>
        <label>Education Activity</label>
        <referenceTo>Education_Activity__c</referenceTo>
        <relationshipLabel>Education Transcripts</relationshipLabel>
        <relationshipName>Education_Transcripts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Progress / Past Due</fullName>
                </value>
                <value>
                    <fullName>Pending Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transcript_Completed_Date__c</fullName>
        <label>Transcript Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transcript_End_Date__c</fullName>
        <label>Transcript End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UC_Skill_Status__c</fullName>
        <label>UC Skill Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Education Transcript</label>
    <nameField>
        <displayFormat>Ed {000000}</displayFormat>
        <label>Education Transcript Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Transcripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>